# catkin_ws_Git

devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: asmarine24.pc  pub_sub.pc  pub_toj.pc  sys_iden.pc  zed_interfaces.pc
src/asmarine24/: CMakeLists.txt  package.xml
src/asmarine24/config/: Untitled Document 1  config_new_auv.yaml  gains  iden_config.yaml  iden_config_2.yaml  new_auv_gains  new_auv_old.yaml
src/asmarine24/launch/: Untitled Document 1  as24_iden.launch  new_auv.launch  trial.launch
src/asmarine24/scripts/: AS24_SDK.py  AS24_SDK_V2.py  AS24_SysIden.py  keyboard_trial.py  m_inverse  orb_slam_topics.txt  wrench_publish.py
src/pub_sub/: CMakeLists.txt  package.xml
src/pub_sub/msg/: Multi_instance.msg  instance.msg
src/pub_sub/scripts/: COLMAP_EXP_Node.py  COlMAP.csv  Camera_handling_SDK_node_F.py  Detection2F.py  SONAR_EXP_Node.py  SVM_Test_Depth_Correction.py  Untitled-2.py  cam_pub.py  depth_correction_model.pkl  detect23.py  dummy_pub.py  perc23.py  perc23_cuda_rev.py  perc23_cuda_rev_COLMAP_Wrapper.py  perc23_cuda_rev_PYZED.py  perc23_cuda_rev_ZED_Wrapper.py  perc23_old.py  perc23test.py  pub.py  sub.py  test_yolo_script.py
src/pub_sub/srv/: PointCloudQuery.srv  PointCloudValue.srv
src/sys_iden/: CMakeLists.txt  package.xml
src/sys_iden/config/: iden_config.yaml
src/sys_iden/launch/: arduino_test.launch  sys_iden.launch  sys_iden_2.launch
src/sys_iden/scripts/: main_iden.py  sys_iden.code-workspace  sys_idn_node.py  test_wrench_node.py  thrust_controller_node.py  trial.py
src/sys_iden/scripts/Ard23/: Ard23.ino
(+76 files in other folders)
