<?xml version="1.0"?>
<package format="2">
  <name>sys_iden</name>
  <version>0.0.0</version>
  <description>The sys_iden package</description>
  <maintainer email="elkeshky@todo.todo">elkeshky</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>math</build_depend>
  <build_depend>simple_pid</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>math</build_export_depend>
  <build_export_depend>simple_pid</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>simple_pid</exec_depend>
  <export>
  </export>
</package>
